Add angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar class="header-bar" color="primary">
+    <span class="title">MTG LEAGUE</span>
+</md-toolbar>
+
+<div class="content">
+</div>
